--- a/.gitattributes
+++ b/.gitattributes
@@ -38,7 +38,7 @@
 # image files are treated as binary by default.
 ###############################################################################
 *.jpg   binary
-*.png   binary
+*.png filter=lfs diff=lfs merge=lfs -text
 *.gif   binary
 ###############################################################################
 # diff behavior for common document formats
@@ -58,3 +58,4 @@
 #*.rtf   diff=astextplain
 #*.RTF   diff=astextplain
 *.fbx filter=lfs diff=lfs merge=lfs -text
+*.tif filter=lfs diff=lfs merge=lfs -text
